- format = full (Anzeige wie bei einer Kontakt-Einzelseite)


Versionsänderungen:
===================
####Version 2.1.16:     
- Nochmal Bugfix #170: Doppelte Inhaltsausgabe bei format=page auch für Ausgabe der Kategorie    

####Version 2.1.15:     
- Bugfix #170: Doppelte Inhaltsausgabe bei format=page    

####Version 2.1.14:
- Shortcodes in Description bei Page Ausgabe erlaubt

####Version 2.1.13:

- Bugfix #159: Leere Zwischenüberschrift in Sidebar
- Bei Sprechzeitenausgabe wird Content in div anstelle span ausgegeben, da sonst invalides HTML
- Bild in widget nun parametrisierbar über Parameter bild. 
   Default in FAU-Einrichtungen: Bild in kleiner Inline-Sidebar = 0. 

####Version 2.1.12:

- Bugfix #157 bei der Anzeige der Personenseite:
  Kontaktpersonen besser formatiert.
- Bugfix #153 bei Anzeige von Kontakten ohne Bild
  
    
####Version 2.1.11:    

- Bugfix für Einbindung leere Kategorie    

####Version 2.1.10:    

- Entwurf für Archiv-Seite für /person    
- Filtern nach Kontakt-Kategorien möglich    
- Reihenfolge der von Adresse und Telefonnummern für Standardausgabe und format="kompakt" angepasst     
- Anpassung des Parameters extended=1       


####Version 2.1.9:

- Bugfix für Abwärtskompatibilität mit dem alten FAU Plugin     

####Version 2.1.8:

- Abwärtskompatibilität mit der Nutzung des alten FAU Plugins und dessen Kontaktverwaltung eingebaut:
  Wenn das Theme "FAU" ist und dort dioe alte Personenverwaltung aktiviert ist,
  DANN wird dieses Plugin die Shortcodes "person" und "persons" NICHT bedienen, sondern
  nur "kontakt" und "kontaktliste". Ausserdem wird das Widget aus diesem Plugin nicht
  registriert, sondern das alte angezeigt.
  Somit hat dann die Webredaktion die Möglichkeit, die alten Daten in die neuen Felder zu kopieren
  ohne das es optisch eine Ämnderung ergibt. Die Webredaktion muss zum Anzeigen
  der neuen Daten dann den Shortcode [kontakt] verwenden. Um das hiesige Widget zu aktivieren