@@ -20,6 +20,7 @@ Versionsänderungen:
 ===================
 ####Version 2.1.16:     
 - Nochmal Bugfix #170: Doppelte Inhaltsausgabe bei format=page auch für Ausgabe der Kategorie    
+- Überschrift bei format=page: Standardmäßig wird auf Ausgabe des Namens bzw. (wenn nicht dieser nicht vorhanden ist) Titels verzichtet, optional aber über show=name anzeigbar    
 
 ####Version 2.1.15:     
 - Bugfix #170: Doppelte Inhaltsausgabe bei format=page    
